--- a/FormUI/App.config
+++ b/FormUI/App.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <connectionStrings>
+    <add name="SampleDbStandard" connectionString="Server=localhost;Database=Sample;User Id=sa;Password=1234;" providerName="System.Data.SqlClient"/>
+    <add name="SampleDbTrusted" connectionString="Server=localhost;Database=Sample;Trusted_Connection=True;"/>
+  </connectionStrings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
 </configuration>
